create 3 page app, control robot using sliders, add instructional page, update preset robot action cards

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
     addUnimodulesDependencies()
+    compile project(':react-native-bluetooth-serial')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
