--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^1.1.0",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.8",
+    "@react-navigation/stack": "^5.1.0",
     "axios": "^0.19.2",
+    "buffer": "^5.4.3",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-ble-manager": "^7.1.2",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.1.0",
     "react-native-slider": "^0.11.0",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7"
